[gd_scene load_steps=7 format=3 uid="uid://ckreaucox1dvb"]

[ext_resource type="Script" path="res://scripts/titlescreen.gd" id="1_aralp"]
[ext_resource type="FontFile" uid="uid://due786ehbt6wf" path="res://assets/fonts/Stitch-'n School.ttf" id="1_bbgsk"]
[ext_resource type="Texture2D" uid="uid://chyn7vf2748jw" path="res://assets/fonts/2.jpg" id="2_coyn6"]
[ext_resource type="Theme" uid="uid://bh5uhv7nypu4m" path="res://assets/fonts/buttons.tres" id="3_gm1t1"]
[ext_resource type="PackedScene" uid="uid://dl50ke4v2urqd" path="res://scenes/fadeOutLayer.tscn" id="5_wah8a"]
[ext_resource type="PackedScene" uid="uid://bnvdjymses3ns" path="res://scenes/options.tscn" id="6_4t7bn"]

[node name="titlescreen" type="CanvasLayer"]
script = ExtResource("1_aralp")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.742472, 0.732679, 0.73919, 1)
position = Vector2(635, 350)
scale = Vector2(1.25, 0.872)
texture = ExtResource("2_coyn6")
region_enabled = true
region_rect = Rect2(1.45795, 179.718, 1028.9, 838.279)

[node name="Label" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.0
offset_top = -256.0
offset_right = 558.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.92549, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.92549, 0, 0, 1)
theme_override_constants/shadow_offset_x = 12
theme_override_constants/shadow_offset_y = 6
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/normal_font = ExtResource("1_bbgsk")
theme_override_font_sizes/normal_font_size = 86
bbcode_enabled = true
text = "[wave]DEFENDERS LOVERS"

[node name="FadeOutLayer" parent="." instance=ExtResource("5_wah8a")]
visible = false

[node name="Buttons" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -38.0
offset_right = 119.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="start" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_gm1t1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.898039, 0, 1)
theme_override_fonts/font = ExtResource("1_bbgsk")
theme_override_font_sizes/font_size = 44
toggle_mode = true
text = "START
"

[node name="HSeparator" type="HSeparator" parent="Buttons"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="options" type="Button" parent="Buttons"]
layout_mode = 2
theme = ExtResource("3_gm1t1")
theme_override_font_sizes/font_size = 44
text = "OPTIONS"

[node name="HSeparator2" type="HSeparator" parent="Buttons"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="exit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_gm1t1")
theme_override_colors/font_color = Color(0.929715, 0.929715, 0.929715, 1)
theme_override_colors/font_pressed_color = Color(0, 0.898039, 0, 1)
theme_override_fonts/font = ExtResource("1_bbgsk")
theme_override_font_sizes/font_size = 44
text = "EXIT
"

[node name="Options" parent="." instance=ExtResource("6_4t7bn")]
visible = false
offset_left = -315.0
offset_top = -155.0
offset_right = -315.0
offset_bottom = -155.0
scale = Vector2(1.5, 1.5)

[connection signal="pressed" from="Buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/exit" to="." method="_on_exit_pressed"]
